# wgpu_voxel_game

./: .gitignore  Cargo.toml  README.md  build.rs
macros/: Cargo.toml
macros/src/: lib.rs  trait_enum.rs
src/: block.rs  camera.rs  chunk.rs  gui.rs  lib.rs  main.rs  material.rs  mesh.rs  renderer.rs  resources.rs  shader.wgsl  texture.rs  trait_enum.rs  world.rs
src/engine/: engine.rs  mod.rs
src/engine/input/: input.rs  keyboard.rs  mod.rs  mouse.rs
src/engine/render/: mod.rs  renderer.rs
src/engine/time/: mod.rs  stopwatch.rs  time.rs  timer.rs
src/engine/window/: event.rs  mod.rs  window.rs
