[package]
name = "wgpu_voxel_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1" # wgpu uses an outdated version of the raw-window-handle crate, while winit uses the latest one
env_logger = "0.9"
log = "0.4"
wgpu = "0.13.1"
pollster = "0.2"
cgmath = "0.18.0"
bytemuck = { "version" = "1.9.1", "features" = [ "derive" ] }
image = "0.24.2"
anyhow = "1.0.58"
instant = "0.1.12"
ndarray = "0.15.6"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
