[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
paste = "1.0.8"
quote = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
proc-macro2 = "*"
